# Score-Gate

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
src/scoregate/: __init__.py  download_data.py  ingest.py
tests/: test_package.py
